--- a/res/xml/quick_pulldown.xml
+++ b/res/xml/quick_pulldown.xml
@@ -18,4 +18,11 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/quick_pulldown_title">
 
+    <ListPreference
+        android:key="quick_pulldown"
+        android:title="@string/quick_pulldown_title"
+        android:entries="@array/quick_pulldown_entries"
+        android:entryValues="@array/quick_pulldown_values"
+        android:persistent="false" />
+
 </PreferenceScreen>
