--- a/res/xml/qs_advanced.xml
+++ b/res/xml/qs_advanced.xml
@@ -30,4 +30,10 @@
         android:summary="@string/qs_wifi_easy_toggle_summary"
         android:defaultValue="false" />
 
+    <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+        android:key="qs_data_advanced"
+        android:title="@string/qs_advanced_data_title"
+        android:summary="@string/qs_advanced_data_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
