--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -22,8 +22,7 @@
     <PreferenceScreen
        android:key="statusbar_settings"
        android:fragment="com.blissroms.blissify.statusbar.StatusBarSettings"
-       android:title="@string/statusbar_settings_title" 
-       android:icon="@drawable/ic_bliss_statusbar" />
+       android:title="@string/statusbar_settings_title" />
 
     <PreferenceScreen
        android:key="animations_settings"
@@ -34,5 +33,10 @@
        android:key="gestures_settings"
        android:fragment="com.blissroms.blissify.gestures.GestureSettings"
        android:title="@string/gestures_settings_title" />
+
+    <PreferenceScreen
+       android:key="lockscreen_settings"
+       android:fragment="com.blissroms.blissify.lockscreen.LockScreenSettings"
+       android:title="@string/lockscreen_settings_title" />
 
 </PreferenceScreen>
