--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -39,4 +39,9 @@
        android:fragment="com.blissroms.blissify.lockscreen.LockScreenSettings"
        android:title="@string/lockscreen_settings_title" />
 
+    <PreferenceScreen
+       android:key="buttons_settings"
+       android:fragment="com.blissroms.blissify.buttons.ButtonsSettings"
+       android:title="@string/buttons_settings_title" />
+
 </PreferenceScreen>
