--- a/res/xml/volume_buttons_tab.xml
+++ b/res/xml/volume_buttons_tab.xml
@@ -39,4 +39,10 @@
         android:summary="@string/volbtn_music_controls_summary"
         android:defaultValue="false" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="swap_volume_buttons"
+        android:title="@string/swap_volume_buttons_title"
+        android:summary="@string/swap_volume_buttons_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
