--- a/res/xml/toast_animation.xml
+++ b/res/xml/toast_animation.xml
@@ -18,4 +18,10 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/toast_animation_title">
 
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="toast_icon"
+            android:title="@string/toast_icon_title"
+            android:summary="@string/toast_icon_summary"
+            android:defaultValue="true" />
+
 </PreferenceScreen>
