--- a/res/xml/qs_advanced.xml
+++ b/res/xml/qs_advanced.xml
@@ -18,6 +18,13 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/qs_advanced_title">
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="brightness_icon"
+        android:title="@string/brightness_icon_title"
+        android:summary="@string/brightness_icon_summary"
+        android:dependency="qs_show_brightness"
+        android:defaultValue="true"/>
+
     <com.blissroms.blissify.preference.SecureSettingSwitchPreference
         android:key="quick_settings_vibrate"
         android:title="@string/quick_settings_vibrate_title"
