--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -58,6 +58,7 @@
     <PreferenceScreen
        android:key="animation_settings"
        android:fragment="com.blissroms.blissify.animation.AnimationSettings"
-       android:title="@string/animation_settings_title" />
+       android:title="@string/animation_settings_title"
+       android:icon="@drawable/ic_bliss_animation" />
 
 </PreferenceScreen>
