--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -28,16 +28,19 @@
     <PreferenceScreen
        android:key="quick_settings"
        android:fragment="com.blissroms.blissify.quicksettings.QuickSettings"
-       android:title="@string/quick_settings_title" />
+       android:title="@string/quick_settings_title"
+       android:icon="@drawable/ic_bliss_quick_setting" />
 
     <PreferenceScreen
        android:key="notification_settings"
        android:fragment="com.blissroms.blissify.notification.NotificationSettings"
-       android:title="@string/notification_settings_title" />
+       android:title="@string/notification_settings_title"
+       android:icon="@drawable/ic_bliss_notification" />
 
     <PreferenceScreen
        android:key="lockscreen_settings"
        android:fragment="com.blissroms.blissify.lockscreen.LockscreenSettings"
-       android:title="@string/lockscreen_settings_title" />
+       android:title="@string/lockscreen_settings_title"
+       android:icon="@drawable/ic_bliss_lockscreen" />
 
 </PreferenceScreen>
