--- a/res/xml/statusbar_logo.xml
+++ b/res/xml/statusbar_logo.xml
@@ -25,4 +25,11 @@
         android:summary="@string/status_bar_bliss_logo_summary"
         android:defaultValue="false" />
 
+    <!-- Status bar Bliss logo Color -->
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="status_bar_bliss_logo_color"
+        android:title="@string/status_bar_bliss_logo_color"
+        android:defaultValue="0xffffffff"
+        android:dependency="status_bar_bliss_logo" />
+
 </PreferenceScreen>
