--- a/res/xml/lockscreen_gestures.xml
+++ b/res/xml/lockscreen_gestures.xml
@@ -26,4 +26,10 @@
                 android:targetClass="com.android.systemui.bliss.LockscreenShortcutsActivity" />
         </PreferenceScreen>
 
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="keyguard_toggle_torch"
+            android:title="@string/keyguard_torch_title"
+            android:summary="@string/keyguard_torch_summary"
+            android:defaultValue="false" />
+
 </PreferenceScreen>
