--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -37,6 +37,12 @@
         android:title="@string/network_traffic_settings_title"
         android:summary="@string/network_traffic_settings_summary" />
 
+    <Preference
+        android:key="battery_bar_settings"
+        android:title="@string/battery_bar_title"
+        android:summary="@string/battery_bar_summary"
+        android:fragment="com.blissroms.blissify.fragments.statusbar.BatteryBar" />
+
     <PreferenceCategory
         android:title="@string/status_bar_icons_title">
 
