--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -342,4 +342,15 @@
         <item>silent</item>
     </string-array>
 
+    <!-- Status bar Bliss Logo position-->
+    <string-array name="status_bar_logo_position_entries" translatable="false">
+        <item>@string/status_bar_logo_position_left</item>
+        <item>@string/status_bar_logo_position_right</item>
+    </string-array>
+
+    <string-array name="status_bar_logo_position_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+</string-array>
+
 </resources>
