--- a/res/xml/statusbar_logo.xml
+++ b/res/xml/statusbar_logo.xml
@@ -18,4 +18,24 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/statusbar_bliss_logo">
 
+   <!-- Status bar Bliss Logo -->
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="status_bar_bliss_logo"
+            android:title="@string/status_bar_bliss_logo_title"
+            android:summary="@string/status_bar_bliss_logo_summary" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="status_bar_bliss_logo_color"
+            android:title="@string/status_bar_bliss_logo_color"
+            android:defaultValue="0xffffffff"
+            android:dependency="status_bar_bliss_logo" />
+
+       <ListPreference
+            android:key="status_bar_bliss_logo_style"
+            android:title="@string/status_bar_bliss_logo_position"
+            android:dialogTitle="@string/status_bar_bliss_logo_position"
+            android:entries="@array/status_bar_logo_position_entries"
+            android:entryValues="@array/status_bar_logo_position_values"
+            android:dependency="status_bar_bliss_logo" />
+
 </PreferenceScreen>
