--- a/res/xml/qs_advanced.xml
+++ b/res/xml/qs_advanced.xml
@@ -55,4 +55,22 @@
         android:summary="@string/qs_battery_easy_toggle_summary"
         android:defaultValue="false" />
 
+     <ListPreference
+        android:key="qs_rows_portrait"
+        android:title="@string/qs_rows_portrait_title"
+        android:entries="@array/qs_rows_portrait_entries"
+        android:entryValues="@array/qs_rows_portrait_values" />
+
+    <ListPreference
+        android:key="qs_rows_landscape"
+        android:title="@string/qs_rows_landscape_title"
+        android:entries="@array/qs_rows_landscape_entries"
+        android:entryValues="@array/qs_rows_landscape_values" />
+
+    <ListPreference
+        android:key="qs_columns"
+        android:title="@string/qs_columns_title"
+        android:entries="@array/qs_columns_entries"
+        android:entryValues="@array/qs_columns_values" />
+
 </PreferenceScreen>
