--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,4 +19,9 @@
     <color name="background_tab_pressed">#1AFFFFFF</color>
     <color name="material_deep_teal_500">@*android:color/material_deep_teal_500</color>
 
+    <!-- Color used by notification log view -->
+    <color name="theme_primary_dark">#21272b</color>
+    <color name="white">#FFF</color>
+    <color name="action_picker_fab_background">@color/theme_accent</color>
+
 </resources>
