--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -368,4 +368,61 @@
         <item>3</item>
     </string-array>
 
+    <!-- Ticker Fonts -->
+    <string-array name="ticker_fonts_entries" translatable="false">
+        <item>@string/ticker_font_normal</item>
+        <item>@string/ticker_font_bold</item>
+        <item>@string/ticker_font_italic</item>
+        <item>@string/ticker_font_bold_italic</item>
+        <item>@string/ticker_font_light_normal</item>
+        <item>@string/ticker_font_light_italic</item>
+        <item>@string/ticker_font_thin_normal</item>
+        <item>@string/ticker_font_thin_italic</item>
+        <item>@string/ticker_font_condensed_normal</item>
+        <item>@string/ticker_font_condensed_bold</item>
+        <item>@string/ticker_font_condensed_italic</item>
+        <item>@string/ticker_font_condensed_bold_italic</item>
+        <item>@string/ticker_font_medium_normal</item>
+        <item>@string/ticker_font_medium_italic</item>
+        <item>@string/ticker_font_black_normal</item>
+        <item>@string/ticker_font_black_italic</item>
+        <item>@string/ticker_font_condensed_light_normal</item>
+        <item>@string/ticker_font_condensed_light_italic</item>
+        <item>@string/ticker_font_dancingscript</item>
+        <item>@string/ticker_font_dancingscript_bold</item>
+        <item>@string/ticker_font_comingsoon</item>
+        <item>@string/ticker_font_notoserif</item>
+        <item>@string/ticker_font_notoserif_italic</item>
+        <item>@string/ticker_font_notoserif_bold</item>
+        <item>@string/ticker_font_notoserif_bold_italic</item>
+    </string-array>
+
+    <string-array name="ticker_fonts_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+        <item>22</item>
+        <item>23</item>
+        <item>24</item>
+    </string-array>
+
 </resources>
