--- a/res/xml/statusbar_ticker.xml
+++ b/res/xml/statusbar_ticker.xml
@@ -16,27 +16,42 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/statusbar_ticker_title">
 
     <SwitchPreference
-            android:key="status_bar_show_ticker"
-            android:title="@string/ticker_title"
-            android:summary="@string/ticker_summary"
-            android:defaultValue="false" />
+        android:key="status_bar_show_ticker"
+        android:title="@string/ticker_title"
+        android:summary="@string/ticker_summary"
+        android:defaultValue="false" />
+
+    <com.android.settings.zephyr.CustomSeekBarPreference
+        android:key="status_bar_ticker_font_size"
+        android:title="@string/ticker_font_size_title"
+        android:defaultValue="14"
+        settings:max="20"
+        settings:min="4"
+        settings:units="dp" />
+
+    <ListPreference
+        android:key="status_bar_ticker_font_style"
+        android:entries="@array/ticker_fonts_entries"
+        android:entryValues="@array/ticker_fonts_values"
+        android:title="@string/ticker_font_style_title" />
 
     <PreferenceCategory
         android:key="ticker_colors"
         android:title="@string/colors_title">
 
-         <net.margaritov.preference.colorpicker.ColorPickerPreference
-            android:key="status_bar_ticker_text_color"
-            android:title="@string/text_title"
-            android:defaultValue="#ffffffff" />
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="status_bar_ticker_text_color"
+        android:title="@string/text_title"
+        android:defaultValue="#ffffffff" />
 
-         <net.margaritov.preference.colorpicker.ColorPickerPreference
-            android:key="status_bar_ticker_icon_color"
-            android:title="@string/icon_title"
-            android:defaultValue="#ffffffff" />
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="status_bar_ticker_icon_color"
+        android:title="@string/icon_title"
+        android:defaultValue="#ffffffff" />
 
 	</PreferenceCategory>
 
