--- a/res/xml/nav_button.xml
+++ b/res/xml/nav_button.xml
@@ -26,10 +26,14 @@
          android:key="hardware_keys_disable"
          android:title="@string/hardware_keys_disable_title" />
 
-    <SwitchPreference
+    <com.android.settings.bliss.CustomSeekBarPreference
         android:key="button_brightness"
         android:title="@string/button_brightness_title"
-        android:persistent="false" />
+            android:max="255"
+            settings:min="0"
+            settings:units=""
+            android:dependency="hardware_keys_disable"
+            android:persistent="false" />
 
     <ListPreference
         android:dialogTitle="@string/backlight_timeout_title"
@@ -37,7 +41,8 @@
         android:entryValues="@array/backlight_timeout_values"
         android:key="backlight_timeout"
         android:persistent="false"
-        android:title="@string/backlight_timeout_title" />
+        android:title="@string/backlight_timeout_title" 
+        android:dependency="hardware_keys_disable" />
 
 </PreferenceCategory>
 
