--- a/res/xml/heads_up_options.xml
+++ b/res/xml/heads_up_options.xml
@@ -28,4 +28,11 @@
         android:entryValues="@array/heads_up_snooze_values"
         android:defaultValue="0" />
 
+    <com.bliss.support.preferences.SystemSettingIntListPreference
+        android:key="heads_up_timeout"
+        android:title="@string/heads_up_time_out_title"
+        android:entries="@array/heads_up_time_out_entries"
+        android:entryValues="@array/heads_up_time_out_values"
+        android:defaultValue="0" />
+
 </PreferenceScreen>
