--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -682,4 +682,14 @@
     <string name="audio_panel_view_bt_sco_title">Bluetooth</string>
     <string name="audio_panel_view_timeout_title">Volume panel timeout</string>
 
+    <!-- Heads up snooze -->
+    <string name="heads_up_category">Heads up</string>
+    <string name="heads_up_snooze_title">Snooze timer</string>
+    <string name="heads_up_snooze_disabled">disabled</string>
+    <string name="heads_up_snooze_1min">1 minute</string>
+    <string name="heads_up_snooze_5min">5 minutes</string>
+    <string name="heads_up_snooze_10min">10 minutes</string>
+    <string name="heads_up_snooze_15min">15 minutes</string>
+    <string name="heads_up_snooze_20min">20 minutes</string>
+
 </resources>
