--- a/res/xml/statusbar_battery.xml
+++ b/res/xml/statusbar_battery.xml
@@ -37,7 +37,7 @@
         android:entryValues="@array/status_bar_battery_percentage_values"
         android:defaultValue="0" />
 
-    <net.bliss.colorpicker.preference.ColorPickerPreference
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
         android:key="status_bar_charge_color"
         android:title="@string/status_bar_charge_color_title"
         android:summary="@string/status_bar_charge_color_summary"
@@ -48,6 +48,13 @@
         android:key="status_bar_battery_style_tile"
         android:title="@string/status_bar_battery_style_tile_title"
         android:summary="@string/status_bar_battery_style_tile_summary"
+        android:defaultValue="true" />
+
+    <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+        android:key="force_charge_battery_text"
+        android:title="@string/force_charge_battery_text_title"
+        android:summaryOn="@string/force_charge_battery_text_summary_on"
+        android:summaryOff="@string/force_charge_battery_text_summary_off"
         android:defaultValue="true" />
 
 </PreferenceScreen>
