--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -73,6 +73,16 @@
             android:summary="@string/status_bar_battery_text_charging_summary"
             android:defaultValue="true" />
 
+        <!-- Text charging symbol -->
+        <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="text_charging_symbol"
+            android:title="@string/text_charging_symbol_title"
+            android:summary="%s"
+            android:dialogTitle="@string/text_charging_symbol_dialog"
+            android:entries="@array/text_charging_symbol_entries"
+            android:entryValues="@array/text_charging_symbol_values"
+            android:defaultValue="0" />
+
         <Preference
             android:key="batterybar_settings"
             android:title="@string/battery_bar_title"
