--- a/res/xml/statusbar_carrier_label.xml
+++ b/res/xml/statusbar_carrier_label.xml
@@ -33,4 +33,13 @@
         android:key="status_bar_carrier_color"
         android:title="@string/status_bar_carrier_color"
         android:defaultValue="0xffffffff" />
+
+    <com.android.settings.bliss.CustomSeekBarPreference
+            android:key="status_bar_carrier_font_size"
+            android:title="@string/status_bar_carrier_size"
+            settings:max="23"
+            settings:min="4"
+            settings:defaultValue="14"
+            settings:units="dp" />
+
 </PreferenceScreen>
