--- a/res/xml/stock_recents.xml
+++ b/res/xml/stock_recents.xml
@@ -33,4 +33,10 @@
         android:defaultValue="3"
         android:dependency="show_clear_all_recents" />
 
+     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="systemui_recents_mem_display"
+        android:title="@string/systemui_recents_mem_display_title"
+        android:summary="@string/systemui_recents_mem_display_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
