--- a/res/drawable/ic_bliss_statusbar.xml
+++ b/res/drawable/ic_bliss_statusbar.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="92dp"
-    android:height="92dp"
-    android:viewportWidth="92"
-    android:viewportHeight="92">
+    android:width="128dp"
+    android:height="128dp"
+    android:viewportWidth="128"
+    android:viewportHeight="128">
 
     <path
-        android:fillColor="#000000"
+        android:fillColor="?android:attr/colorAccent"
         android:pathData="M89.9,153.4c0,3.4-2.4,6.1-5.3,6.1H15H7.4c-2.9,0-5.3-2.7-5.3-6.1V8.3c0-3.4,2.4-6.1,5.3-6.1H79h5.6c2.9,0,5.3,2.8,5.3,6.1
 V153.4z M6.1,145.5h79.8V17.9H6.1V145.5z
 M55.2,10.1H36.8c-0.2,0-0.5,0-0.6-0.1c0.2,0.4,0.7,0.8,1.3,0.8h17.2c0.6,0,1.1-0.3,1.3-0.8
 C55.7,10.1,55.5,10.1,55.2,10.1z" />
     <path
-        android:fillColor="#000000"
+        android:fillColor="?android:attr/colorAccent"
         android:pathData="M 7 20 H 84 V 25.7 H 7 V 20 Z" />
     <path
-        android:fillColor="#000000"
+        android:fillColor="?android:attr/colorAccent"
         android:pathData="M62.4,58.5h-0.6c-0.6,0-1.2-0.5-1.3-1.1c-0.2-1.1-0.5-2.2-0.8-3.2c-0.2-0.6,0-1.3,0.6-1.6l0.6-0.3
 c0.3-0.2,0.4-0.6,0.2-0.9l-1.6-2.7c-0.2-0.3-0.6-0.4-0.9-0.2l-0.6,0.3c-0.5,0.3-1.2,0.2-1.6-0.3c-0.7-0.8-1.5-1.6-2.3-2.3
 c-0.5-0.4-0.6-1.1-0.3-1.6L54,44c0.2-0.3,0.1-0.7-0.2-0.9L51,41.5c-0.3-0.2-0.7-0.1-0.9,0.2l-0.3,0.6c-0.3,0.5-1,0.8-1.6,0.6
@@ -56,7 +56,7 @@ M53.5,54.6c0,1-0.1,2-0.4,2.9c-0.2,0.8-0.5,1.6-0.8,2.3
 c-0.1,0.2-0.2,0.3-0.4,0.4c-1.2,0.6-2.4,1.4-3.4,2.2l-0.3,0.2l-0.1,0c0.1-0.4,0.2-0.9,0.2-1.3c0.1-0.5,0.1-0.9,0.2-1.4
 c0-0.6,0-1.2,0.1-1.7l0.1-0.3c1-1,2-2,3.2-2.7c0.4-0.3,0.9-0.5,1.4-0.7L53.5,54.6" />
     <path
-        android:fillColor="#000000"
+        android:fillColor="?android:attr/colorAccent"
         android:pathData="M70.6,40c0-0.6-0.1-1.3-0.2-1.8c-0.1-0.2,0-0.5,0.3-0.6l0.9-0.5l0.1-0.4l-1.4-2.4l-0.4-0.1L69,34.6
 c-0.2,0.1-0.5,0.1-0.7-0.1c-0.9-0.8-2-1.5-3.2-1.8c-0.2-0.1-0.4-0.3-0.4-0.5v-1l-0.3-0.3h-2.8l-0.3,0.3v1c0,0.3-0.2,0.5-0.4,0.5
 c-1.2,0.3-2.3,1-3.2,1.8c-0.2,0.2-0.5,0.2-0.7,0.1l-0.9-0.5l-0.4,0.1l-1.4,2.4l0.1,0.4l0.9,0.5c0.2,0.1,0.3,0.4,0.3,0.6
@@ -65,6 +65,6 @@ c0.2-0.1,0.5-0.1,0.7,0.1c0.9,0.9,2,1.5,3.2,1.8c0.2,0.1,0.4,0.3,0.4,0.5v1l0.3,0.3
 c1.2-0.3,2.3-1,3.2-1.8c0.2-0.2,0.5-0.2,0.7-0.1l0.9,0.5l0.4-0.1l1.4-2.4l-0.1-0.4l-0.9-0.5c-0.2-0.1-0.3-0.4-0.3-0.6
 C70.6,41.2,70.6,40.6,70.6,40" />
     <path
-        android:fillColor="#000000"
+        android:fillColor="?android:attr/colorAccent"
         android:pathData="M63,45.1c-2.9,0-5.2-2.3-5.2-5.2c0-2.9,2.3-5.2,5.2-5.2c2.9,0,5.2,2.3,5.2,5.2C68.2,42.8,65.9,45.1,63,45.1" />
 </vector>
