--- a/res/xml/qs_advanced.xml
+++ b/res/xml/qs_advanced.xml
@@ -107,6 +107,12 @@
         android:summary="@string/qs_battery_easy_toggle_summary"
         android:defaultValue="false" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="qs_quickbar_scroll_enabled"
+        android:title="@string/qqs_scroll_title"
+        android:summary="@string/qqs_scroll_summary"
+        android:defaultValue="false"/>
+
      <ListPreference
         android:key="qs_rows_portrait"
         android:title="@string/qs_rows_portrait_title"
