--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -35,4 +35,9 @@
        android:fragment="com.blissroms.blissify.notification.NotificationSettings"
        android:title="@string/notification_settings_title" />
 
+    <PreferenceScreen
+       android:key="buttons_settings"
+       android:fragment="com.blissroms.blissify.buttons.ButtonSettings"
+       android:title="@string/buttons_settings_title" />
+
 </PreferenceScreen>
