--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -55,4 +55,9 @@
        android:title="@string/power_settings_title"
        android:icon="@drawable/ic_bliss_powermenu" />
 
+    <PreferenceScreen
+       android:key="animation_settings"
+       android:fragment="com.blissroms.blissify.animation.AnimationSettings"
+       android:title="@string/animation_settings_title" />
+
 </PreferenceScreen>
