--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -40,4 +40,9 @@
        android:fragment="com.blissroms.blissify.buttons.ButtonSettings"
        android:title="@string/buttons_settings_title" />
 
+    <PreferenceScreen
+       android:key="animation_settings"
+       android:fragment="com.blissroms.blissify.animation.AnimationSettings"
+       android:title="@string/animation_settings_title" />
+
 </PreferenceScreen>
