--- a/res/xml/smartbar_settings.xml
+++ b/res/xml/smartbar_settings.xml
@@ -57,4 +57,10 @@
         android:title="@string/smartbar_doubletap_sleep_title"
         android:summary="@string/smartbar_doubletap_sleep_summary"
         android:defaultValue="true" />
+
+    <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+        android:key="one_handed_mode_ui"
+        android:title="@string/one_handed_mode_title"
+        android:summary="@string/one_handed_mode_summary"
+        android:defaultValue="true" />
 </PreferenceScreen>
