--- a/res/xml/lockscreen_tweaks.xml
+++ b/res/xml/lockscreen_tweaks.xml
@@ -25,4 +25,9 @@
          android:summary="@string/lockscreen_battery_info_summary"
          android:defaultValue="false" />
 
+     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+         android:key="keyguard_show_clock"
+         android:title="@string/keyguard_statusbar_clock_title"
+         android:summary="@string/keyguard_statusbar_clock_summary" />
+
 </PreferenceScreen>
