--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -52,6 +52,7 @@
     <PreferenceScreen
        android:key="power_settings"
        android:fragment="com.blissroms.blissify.power.PowerSettings"
-       android:title="@string/power_settings_title" />
+       android:title="@string/power_settings_title"
+       android:icon="@drawable/ic_bliss_powermenu" />
 
 </PreferenceScreen>
