--- a/res/xml/heads_up_settings.xml
+++ b/res/xml/heads_up_settings.xml
@@ -15,20 +15,12 @@
 -->
 <PreferenceScreen
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >
+        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+        android:title="@string/headsup_settings_title">
 
-    <ListPreference
-        android:key="heads_up_time_out"
-        android:title="@string/heads_up_time_out_title"
-        android:entries="@array/heads_up_time_out_entries"
-        android:entryValues="@array/heads_up_time_out_values"
-        android:persistent="false" />
-
-    <ListPreference
-        android:key="heads_up_snooze_time"
-        android:title="@string/heads_up_snooze_title"
-        android:entries="@array/heads_up_snooze_entries"
-        android:entryValues="@array/heads_up_snooze_values"
-        android:persistent="false" />
+      <PreferenceScreen 
+        android:key="heads_up_settings"
+        android:title="@string/headsup_settings_title"
+        android:fragment="com.blissroms.blissify.statusbar.tabs.HeadsUp"/>
 
 </PreferenceScreen>
