--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -355,5 +355,8 @@
     <!--statusbar advanced system icons -->
     <string name="statusbar_advanced_icons">Advanced System Icons</string>
 
+    <string name="volte_icon_title">VoLTE icon</string>
+    <string name="volte_icon_summary">Display VoLTE icon when available</string>
+
 </resources>
 
