--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -15,4 +15,11 @@
     android:key="advanced_icons"
     android:title="@string/statusbar_advanced_icons">
 
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="volte_icon"
+            android:icon="@drawable/ic_volte"
+            android:title="@string/volte_icon_title"
+            android:summary="@string/volte_icon_summary"
+            android:defaultValue="false"/>
+
 </PreferenceScreen>
