--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -227,6 +227,13 @@
         android:title="@string/misc_category_title"
         android:icon="@drawable/ic_blissify_misc">
 
+    <!-- Launch music player when headset is connected -->
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="headset_connect_player"
+        android:title="@string/headset_connect_player_title"
+        android:summary="@string/headset_connect_player_summary"
+        android:defaultValue="false" />
+
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="sensor_block" 
         android:title="@string/sensor_block_title"
