--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -15,6 +15,33 @@
     android:key="advanced_icons"
     android:title="@string/statusbar_advanced_icons">
 
+    <!-- Status bar bliss logo -->
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="status_bar_logo"
+            android:title="@string/status_bar_bliss_logo_title"
+            android:summary="@string/status_bar_bliss_logo_summary" />
+        <com.bliss.support.colorpicker.ColorPickerPreference
+            android:key="status_bar_logo_color"
+            android:title="@string/status_bar_bliss_logo_color"
+            android:defaultValue="0xffffffff"
+            android:dependency="status_bar_logo" />
+       <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="status_bar_logo_position"
+            android:title="@string/status_bar_bliss_logo_position"
+            android:dialogTitle="@string/status_bar_bliss_logo_position"
+            android:entries="@array/status_bar_logo_position_entries"
+            android:entryValues="@array/status_bar_logo_position_values"
+            android:defaultValue="0"
+            android:dependency="status_bar_logo" />
+       <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="status_bar_logo_style"
+            android:title="@string/status_bar_bliss_logo_style"
+            android:dialogTitle="@string/status_bar_bliss_logo_style"
+            android:entries="@array/status_bar_logo_style_entries"
+            android:entryValues="@array/status_bar_logo_style_values"
+            android:defaultValue="0"
+            android:dependency="status_bar_logo" />
+
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="bluetooth_show_battery"
             android:title="@string/bluetooth_battery_title"
