--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -245,6 +245,15 @@
         <item>@string/clock_date_format_custom</item>
     </string-array>
 
+    <string-array name="clock_date_position_entries" translatable="false">
+        <item>@string/clock_date_left</item>
+        <item>@string/clock_date_right</item>
+    </string-array>
+     <string-array name="clock_date_position_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <!-- Carrier Label -->
     <string-array name="carrier_label_entries" translatable="false">
         <item>@string/show_carrier_disabled</item>
