--- a/res/xml/recents_main.xml
+++ b/res/xml/recents_main.xml
@@ -14,4 +14,13 @@
                 android:fragment="com.blissroms.blissify.fragments.recents.Style"
                 />
 
+    <PreferenceScreen
+        android:icon="@drawable/ic_hafr"
+        android:title="@string/hide_apps_from_recents_title"
+        android:summary="@string/hide_apps_from_recents_summary" >
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.settings"
+            android:targetClass="com.blissroms.blissify.fragments.recents.hideappfromrecents.HAFRAppListActivity" />
+    </PreferenceScreen>
+
 </PreferenceScreen>
